# rewatch

./: .coveragerc  .dockerignore  .restyled.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.ml  LICENSE.borders  Makefile  README.md  SECURITY.md  compose.yaml  manage.py  netlify.toml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.ml.txt  webpack.config.js
.ci/: compose.ci.yaml  compose.cypress.yaml  docker_build  pack  update_version
.cursor/: mcp.json
.github/: PULL_REQUEST_TEMPLATE.md
landing/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.js
mcp_server/: README.md  pyproject.toml
mcp_server/rewatch_mcp/: __init__.py  alert_catalog.py  platform_catalog.py  server.py
mcp_server/tests/: test_error_paths.py  test_server.py
redash/: __init__.py  monitor.py  version_check.py  worker.py  wsgi.py
rewatch/: app.py  security.py
scripts/: README.md  cleanup_archived_dashboards.py  cleanup_orphan_queries.py  create_ethereum_defi_dashboard.py  create_france_weather_dashboard.py  create_hypertrader_user_dashboard.py  create_montpellier_airport_dashboard.py  create_montpellier_trains_dashboard.py  create_montpellier_weather_dashboard.py  create_sniffer_dashboard.py  create_viz_demo_dashboard.py  dashboard_script_utils.py  deploy.sh  generate_favicons.py  migrate_ml_model.py
setup/: README.md
tests/: __init__.py  factories.py  test_authentication.py  test_cli.py  test_configuration.py  test_handlers.py  test_models.py  test_monitor.py  test_permissions.py  test_utils.py
(+1024 files in other folders)
