[project]
name = "rewatch-mcp"
version = "0.1.0"
description = "MCP server exposing the Rewatch (Rewatch) REST API"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
rewatch-mcp = "rewatch_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rewatch_mcp"]
